--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       run: |
         pip install -r requirements.txt
         pip install -r api/requirements.txt
+        pip install pytest
+
     
     - name: Run data collection tests
       run: |
