--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,3 +7,8 @@ scikit-learn>=1.2.0
 xgboost>=1.7.0
 requests>=2.28.0
 python-dotenv>=1.0.0
+# Streamlit for the front-end UI
+streamlit
+
+# For making API calls
+requests
